force-app/main/default/objects/IconicsSettings__c/IconicsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for ICONiCS project</description>
    <label>Iconics Settings</label>
</CustomObject>