force-app/main/default/objects/IconicsSettings__c/fields/AccountProspectRT__c.field-meta.xml
<CustomField>
    <fullName>AccountProspectRT__c</fullName>
    <description>Store the recordtype ID of the Prospect</description>
    <label>AccountProspectRt</label>
    <length>18</length>
    <type>Text</type>
</CustomField>