force-app/main/default/objects/IconicsSettings__c/fields/BackOfficeId__c.field-meta.xml
<CustomField>
    <fullName>BackOfficeId__c</fullName>
    <label>Back Office Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>