force-app/main/default/objects/IconicsSettings__c/fields/CallRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CallRecordTypeID__c</fullName>
    <description>Record type ID of call case</description>
    <label>CallRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>