force-app/main/default/objects/IconicsSettings__c/fields/CaseRT_Care_Service__c.field-meta.xml
<CustomField>
    <fullName>CaseRT_Care_Service__c</fullName>
    <label>CaseRT_Care Service</label>
    <length>21</length>
    <type>Text</type>
</CustomField>