force-app/main/default/objects/IconicsSettings__c/fields/CaseRT_DPCA__c.field-meta.xml
<CustomField>
    <fullName>CaseRT_DPCA__c</fullName>
    <label>CaseRT_DPCA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>