force-app/main/default/objects/IconicsSettings__c/fields/CaseRT_RemoteConsent__c.field-meta.xml
<CustomField>
    <fullName>CaseRT_RemoteConsent__c</fullName>
    <label>CaseRT_RemoteConsent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>