force-app/main/default/objects/IconicsSettings__c/fields/CaseRTChatID__c.field-meta.xml
<CustomField>
    <fullName>CaseRTChatID__c</fullName>
    <description>Record type id for Chat for Case object. Used for restricted picklist values based on the record type for the Flow.</description>
    <label>CaseRTChatID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>