force-app/main/default/objects/IconicsSettings__c/fields/CaseRTClientelingID__c.field-meta.xml
<CustomField>
    <fullName>CaseRTClientelingID__c</fullName>
    <description>&quot;Clienteling&quot; record type id. Used for the Call Qualification Flow</description>
    <label>CaseRTClientelingID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>