force-app/main/default/objects/IconicsSettings__c/fields/CaseRTWaitingListID__c.field-meta.xml
<CustomField>
    <fullName>CaseRTWaitingListID__c</fullName>
    <description>ID of Wiaiting List Record Type (Product on Demand WITHOUT Sku)</description>
    <label>CaseRTWaitingListID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>