force-app/main/default/objects/IconicsSettings__c/fields/ClientelingEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ClientelingEmailAddress__c</fullName>
    <description>This field stores the dedicated email address for clienteling emails</description>
    <label>Clienteling Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>