force-app/main/default/objects/IconicsSettings__c/fields/CurrentNoReply__c.field-meta.xml
<CustomField>
    <fullName>CurrentNoReply__c</fullName>
    <description>email no reply iconics</description>
    <label>CurrentNoReply</label>
    <length>100</length>
    <type>Text</type>
</CustomField>