force-app/main/default/objects/IconicsSettings__c/fields/CurrentYearLegalNotices__c.field-meta.xml
<CustomField>
    <fullName>CurrentYearLegalNotices__c</fullName>
    <label>CurrentYearLegalNotices</label>
    <length>4</length>
    <type>Text</type>
</CustomField>