force-app/main/default/objects/IconicsSettings__c/fields/DefaultEmailTemplateDevName__c.field-meta.xml
<CustomField>
    <fullName>DefaultEmailTemplateDevName__c</fullName>
    <description>Set a default Email Template (Developer Name) when no Queue is set on a Case.
Used in ICX_Email_QuickActionDefaults Apex Class</description>
    <label>Default Email Template (DeveloperName)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>