force-app/main/default/objects/IconicsSettings__c/fields/Distant_Care_Service_RT__c.field-meta.xml
<CustomField>
    <fullName>Distant_Care_Service_RT__c</fullName>
    <defaultValue>&quot;0127i000001xl2LAAQ&quot;</defaultValue>
    <label>Distant Care Service RT</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>