force-app/main/default/objects/IconicsSettings__c/fields/Email_Template_Classic_Concierge__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Classic_Concierge__c</fullName>
    <description>Image use for Email Template D</description>
    <label>Email Template Classic Concierge OLD</label>
    <type>Url</type>
</CustomField>