force-app/main/default/objects/IconicsSettings__c/fields/Email_Template_DPCA_Concierge__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_DPCA_Concierge__c</fullName>
    <label>Email Template DPCA Concierge</label>
    <type>Url</type>
</CustomField>