force-app/main/default/objects/IconicsSettings__c/fields/Email_Template_Image_EMEA_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Image_EMEA_Temporary__c</fullName>
    <label>Email Template Image EMEA Temporary OLD</label>
    <type>Url</type>
</CustomField>