force-app/main/default/objects/IconicsSettings__c/fields/Email_Template_Image_Italy_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Image_Italy_Temporary__c</fullName>
    <description>Image used to promote an exhibition. Italy Template only</description>
    <label>Email Template Image Italy Temporary OLD</label>
    <type>Url</type>
</CustomField>