force-app/main/default/objects/IconicsSettings__c/fields/EmailRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>EmailRecordTypeID__c</fullName>
    <description>Store record type ID from Web&amp;Email cases</description>
    <label>EmailRecordTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>