force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImage__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImage__c</fullName>
    <label>Email Template Image</label>
    <type>Url</type>
</CustomField>