force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImageAMERICAS__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImageAMERICAS__c</fullName>
    <description>Image for email template</description>
    <label>Email Template Image AMERICAS OLD</label>
    <type>Url</type>
</CustomField>