force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImageAPAC__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImageAPAC__c</fullName>
    <description>Image for email template</description>
    <label>Email Template Image APAC OLD</label>
    <type>Url</type>
</CustomField>