force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImageConcierge__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImageConcierge__c</fullName>
    <label>Email Template Image Concierge</label>
    <type>Url</type>
</CustomField>