force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImageDCS__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImageDCS__c</fullName>
    <label>Email Template Image DCS</label>
    <type>Url</type>
</CustomField>