force-app/main/default/objects/IconicsSettings__c/fields/EmailTemplateImageME__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateImageME__c</fullName>
    <label>Email Template Image Middle East</label>
    <type>Url</type>
</CustomField>