force-app/main/default/objects/IconicsSettings__c/fields/GooglePlaceKey__c.field-meta.xml
<CustomField>
    <fullName>GooglePlaceKey__c</fullName>
    <description>Google Place API key</description>
    <label>Google Place Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>