force-app/main/default/objects/IconicsSettings__c/fields/ICONICSWarehouseProfileID__c.field-meta.xml
<CustomField>
    <fullName>ICONICSWarehouseProfileID__c</fullName>
    <description>ICONICS Wharehouse Profile ID</description>
    <label>ICONICSWarehouseProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>