force-app/main/default/objects/IconicsSettings__c/fields/ICX_ClientelingRoleAccess__c.field-meta.xml
<CustomField>
    <fullName>ICX_ClientelingRoleAccess__c</fullName>
    <label>ICX Clienteling Role Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>