force-app/main/default/objects/IconicsSettings__c/fields/ICX_RemoteConsentRoleAccess__c.field-meta.xml
<CustomField>
    <fullName>ICX_RemoteConsentRoleAccess__c</fullName>
    <label>ICX Remote Consent Role Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>