force-app/main/default/objects/IconicsSettings__c/fields/MarketingCloudEventDefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>MarketingCloudEventDefinitionKey__c</fullName>
    <description>marketing cloud eventDefinitionKey for PRP or PROD</description>
    <label>MarketingCloudEventDefinitionKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>