force-app/main/default/objects/IconicsSettings__c/fields/MessagingCountriesException__c.field-meta.xml
<CustomField>
    <fullName>MessagingCountriesException__c</fullName>
    <description>List of countries (ISO2) with exception for messaging separated by semicolon
to map according the language and not the country</description>
    <label>MessagingCountriesException</label>
    <type>TextArea</type>
</CustomField>