force-app/main/default/objects/IconicsSettings__c/fields/MessagingDefaultQueue__c.field-meta.xml
<CustomField>
    <fullName>MessagingDefaultQueue__c</fullName>
    <label>MessagingDefaultQueue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>