force-app/main/default/objects/IconicsSettings__c/fields/Newsletter_URL__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_URL__c</fullName>
    <description>url for account creation in newsletter email confirmation send by marketing cloud</description>
    <label>Newsletter URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>