force-app/main/default/objects/IconicsSettings__c/fields/Request_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Report_Id__c</fullName>
    <description>&quot;Request Report&quot; report Id</description>
    <label>Request Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>