force-app/main/default/objects/IconicsSettings__c/fields/SystemUserId__c.field-meta.xml
<CustomField>
    <fullName>SystemUserId__c</fullName>
    <description>Store the ID of System user</description>
    <label>SystemUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>