force-app/main/default/objects/IconicsSettings__c/fields/TaskRTChatId__c.field-meta.xml
<CustomField>
    <fullName>TaskRTChatId__c</fullName>
    <description>Record Type use for Chat in Task object</description>
    <label>TaskRTChatId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>