force-app/main/default/objects/IconicsSettings__c/fields/TaskRTClientelingId__c.field-meta.xml
<CustomField>
    <fullName>TaskRTClientelingId__c</fullName>
    <description>Iconics Clienteling record type id on Task object</description>
    <label>TaskRTClientelingId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>