force-app/main/default/objects/IconicsSettings__c/fields/TaskRTMessagingId__c.field-meta.xml
<CustomField>
    <fullName>TaskRTMessagingId__c</fullName>
    <description>Task Messaging ID</description>
    <label>TaskRTMessagingId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>