force-app/main/default/objects/IconicsSettings__c/fields/VisualForceHost__c.field-meta.xml
<CustomField>
    <fullName>VisualForceHost__c</fullName>
    <description>Used to call a Visualforce page by iFrame in a Lightning Component (example: Documents from Purchase Product to display a in-memory PDF)</description>
    <inlineHelpText>Used to call a Visualforce page by iFrame in a Lightning Component</inlineHelpText>
    <label>VF Host</label>
    <type>Url</type>
</CustomField>